tests/vertical-slice/accept/wire_cbor_empty_collections.hew
// Validation: empty-collection boundaries round-trip through the CBOR body
// codec — an empty `Vec<i64>` (CBOR empty array) and an empty `string` (CBOR
// empty text). Both must decode back empty, not null or absent. Success
// returns 42.
#[wire]
struct Empties {
    items: Vec<i64> @1,
    label: string @2,
}

fn main() -> i64 {
    let xs: Vec<i64> = Vec::new();
    let h = Empties { items: xs, label: "" };
    let back = Empties.decode(h.encode());
    if back.items.len() != 0 { return 1; }
    if back.label != "" { return 2; }
    42
}
